--- a/Mobile Computing Project App/Mobile Computing Project App/Base.lproj/Main.storyboard
+++ b/Mobile Computing Project App/Mobile Computing Project App/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="weK-6y-rak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="weK-6y-rak">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -58,19 +58,7 @@
                     <view key="view" contentMode="scaleToFill" id="Foe-hY-bVf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Medicine" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pj5-Cg-TpC">
-                                <rect key="frame" x="117" y="314" width="141" height="39"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Pj5-Cg-TpC" firstAttribute="centerX" secondItem="Foe-hY-bVf" secondAttribute="centerX" id="DSc-cA-U5B"/>
-                            <constraint firstItem="Pj5-Cg-TpC" firstAttribute="centerY" secondItem="Foe-hY-bVf" secondAttribute="centerY" id="xZe-G5-K9H"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Medicine" id="EWy-ye-gal"/>
                 </viewController>
