When selecting an event the template loads properly. Saving data being worked on.

--- a/Mobile Computing Project App/Mobile Computing Project App/Base.lproj/Main.storyboard
+++ b/Mobile Computing Project App/Mobile Computing Project App/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data Plotting" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQN-I5-p29">
-                                <rect key="frame" x="97" y="315" width="183" height="39"/>
+                                <rect key="frame" x="96" y="314" width="183" height="39"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -194,7 +194,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Register"/>
                                 <connections>
-                                    <segue destination="hea-6u-XFa" kind="show" id="fhk-4S-InM"/>
+                                    <segue destination="hea-6u-XFa" kind="show" identifier="registerSegue" id="fhk-4S-InM"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGR-5M-egD">
@@ -271,7 +271,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="weK-6y-rak" kind="show" id="KFY-4O-e4E"/>
+                                    <segue destination="weK-6y-rak" kind="show" identifier="" id="KFY-4O-e4E"/>
                                 </connections>
                             </button>
                         </subviews>
